--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^17.3.1",
-    "@angular/cdk": "^17.3.1",
+    "@angular/cdk": "^17.3.5",
     "@angular/common": "^17.3.1",
     "@angular/compiler": "^17.3.1",
     "@angular/core": "^17.3.1",
     "@angular/forms": "^17.3.1",
     "@angular/language-service": "^17.3.1",
+    "@angular/material": "^17.3.5",
+    "@angular/material-moment-adapter": "^17.3.5",
     "@angular/platform-browser": "^17.3.1",
     "@angular/platform-browser-dynamic": "^17.3.1",
     "@angular/router": "^17.3.1",
@@ -36,10 +38,17 @@
     "@coreui/icons": "^3.0.1",
     "@coreui/icons-angular": "~5.0.0",
     "@coreui/utils": "^2.0.2",
+    "axios": "^1.6.8",
     "chart.js": "^4.4.2",
+    "exceljs": "^4.4.0",
+    "file-saver": "^2.0.5",
+    "jwt-decode": "^4.0.0",
     "lodash-es": "^4.17.21",
+    "moment": "^2.30.1",
     "ngx-scrollbar": "^13.0.3",
+    "node-xlsx": "^0.24.0",
     "rxjs": "~7.8.1",
+    "sweetalert2": "^11.10.8",
     "tslib": "^2.6.2",
     "zone.js": "~0.14.4"
   },
