--- a/angular.json
+++ b/angular.json
@@ -101,10 +101,11 @@
               "src/assets"
             ],
             "styles": [
-              "@angular/material/prebuilt-themes/indigo-pink.css",
-              "src/scss/styles.scss"
+              "./node_modules/bootstrap/dist/css/bootstrap.min.css"
             ],
-            "scripts": []
+            
+            "scripts": [
+            ]
           }
         }
       }
