--- a/package.json
+++ b/package.json
@@ -39,14 +39,18 @@
     "@coreui/icons-angular": "~5.0.0",
     "@coreui/utils": "^2.0.2",
     "axios": "^1.6.8",
+    "bootstrap": "^4.6.0",
     "chart.js": "^4.4.2",
     "exceljs": "^4.4.0",
     "file-saver": "^2.0.5",
+    "jquery": "^1.12.4",
     "jwt-decode": "^4.0.0",
     "lodash-es": "^4.17.21",
     "moment": "^2.30.1",
+    "ngx-mat-select-search": "^7.0.6",
     "ngx-scrollbar": "^13.0.3",
     "node-xlsx": "^0.24.0",
+    "popper.js": "^1.16.1",
     "rxjs": "~7.8.1",
     "sweetalert2": "^11.10.8",
     "tslib": "^2.6.2",
@@ -57,7 +61,10 @@
     "@angular/cli": "^17.3.2",
     "@angular/compiler-cli": "^17.3.1",
     "@angular/localize": "^17.3.1",
+    "@types/bootstrap-select": "^1.13.7",
     "@types/jasmine": "^5.1.4",
+    "@types/jquery": "^3.5.29",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/lodash-es": "^4.17.12",
     "@types/node": "^20.11.30",
     "jasmine-core": "^5.1.2",
