--- a/package.json
+++ b/package.json
@@ -51,6 +51,8 @@
     "ngx-scrollbar": "^13.0.3",
     "node-xlsx": "^0.24.0",
     "popper.js": "^1.16.1",
+    "qrcode": "^1.5.3",
+    "qrcode-svg": "^1.1.0",
     "rxjs": "~7.8.1",
     "sweetalert2": "^11.10.8",
     "tslib": "^2.6.2",
@@ -67,6 +69,8 @@
     "@types/jsonwebtoken": "^9.0.6",
     "@types/lodash-es": "^4.17.12",
     "@types/node": "^20.11.30",
+    "@types/qrcode": "^1.5.5",
+    "@types/qrcode-svg": "^1.1.4",
     "jasmine-core": "^5.1.2",
     "karma": "^6.4.3",
     "karma-chrome-launcher": "^3.2.0",
