--- a/angular.json
+++ b/angular.json
@@ -101,7 +101,8 @@
               "src/assets"
             ],
             "styles": [
-              "./node_modules/bootstrap/dist/css/bootstrap.min.css"
+              "./node_modules/bootstrap/dist/css/bootstrap.min.css",
+                "node_modules/sweetalert2/dist/sweetalert2.min.css" 
             ],
             
             "scripts": [
