--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   },
   "private": true,
   "dependencies": {
+    "@amcharts/amcharts5": "^5.9.8",
+    "@amcharts/amcharts5-geodata": "^5.1.2",
     "@angular/animations": "^17.3.1",
     "@angular/cdk": "^17.3.5",
     "@angular/common": "^17.3.1",
@@ -43,6 +45,7 @@
     "chart.js": "^4.4.2",
     "exceljs": "^4.4.0",
     "file-saver": "^2.0.5",
+    "highcharts-angular": "^4.0.0",
     "jquery": "^1.12.4",
     "jwt-decode": "^4.0.0",
     "lodash-es": "^4.17.21",
