--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "build-css": "css-minify -d src/scss/ -o dist/styles"
   },
   "private": true,
   "dependencies": {
@@ -28,6 +29,7 @@
     "@angular/core": "^17.3.1",
     "@angular/forms": "^17.3.1",
     "@angular/language-service": "^17.3.1",
+    "@angular/localize": "^17.3.1",
     "@angular/material": "^17.3.5",
     "@angular/material-moment-adapter": "^17.3.5",
     "@angular/platform-browser": "^17.3.1",
@@ -45,7 +47,6 @@
     "chart.js": "^4.4.2",
     "exceljs": "^4.4.0",
     "file-saver": "^2.0.5",
-    "highcharts-angular": "^4.0.0",
     "jquery": "^1.12.4",
     "jwt-decode": "^4.0.0",
     "lodash-es": "^4.17.21",
@@ -62,10 +63,10 @@
     "zone.js": "~0.14.4"
   },
   "devDependencies": {
+    "@angular-builders/custom-webpack": "^17.0.2",
     "@angular-devkit/build-angular": "^17.3.2",
     "@angular/cli": "^17.3.2",
     "@angular/compiler-cli": "^17.3.1",
-    "@angular/localize": "^17.3.1",
     "@types/bootstrap-select": "^1.13.7",
     "@types/jasmine": "^5.1.4",
     "@types/jquery": "^3.5.29",
@@ -74,16 +75,21 @@
     "@types/node": "^20.11.30",
     "@types/qrcode": "^1.5.5",
     "@types/qrcode-svg": "^1.1.4",
+    "css-minify": "^2.0.0",
+    "html-webpack-plugin": "^5.6.0",
     "jasmine-core": "^5.1.2",
     "karma": "^6.4.3",
     "karma-chrome-launcher": "^3.2.0",
     "karma-coverage": "^2.2.1",
     "karma-jasmine": "^5.1.0",
     "karma-jasmine-html-reporter": "^2.1.0",
-    "typescript": "~5.3.3"
+    "ts-loader": "^9.5.1",
+    "typescript": "~5.3.3",
+    "webpack-cli": "^5.1.4"
   },
   "engines": {
     "node": "^18.13.0 || ^20.9.0",
     "npm": ">= 9"
   }
+  
 }
